--- a/src/app/movie-details/movie-details.page.html
+++ b/src/app/movie-details/movie-details.page.html
@@ -5,5 +5,7 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-card *ngIf="movies">
+    <ion-card-title>{{ movies.images }}</ion-card-title>
+  </ion-card>
 </ion-content>
