--- a/src/app/movies-list/movies-list.page.html
+++ b/src/app/movies-list/movies-list.page.html
@@ -1,9 +1,38 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>MoviesList</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Movies List</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-card *ngIf="!saved">
+    <ion-card-header>No previously searched items...</ion-card-header>
+    <ion-card-content>
+      <p>You currently don't have any saved movies.</p>
+      <p>First select a movie, then you can see your saved movies.</p>
+      <ion-button shape="round" color="primary" expand="full" (click)="goToMovies()">
+        <ion-icon name="search"></ion-icon>&nbsp;Find a Movie
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
 
+  <ion-card *ngIf="saved">
+    <!--    <ion-card-header>Followed Teams</ion-card-header>-->
+    <ion-card-content>
+      <ion-list>
+        <ion-list-header>Followed Teams:</ion-list-header>
+        <ion-item *ngFor="let item of saved" (click)="savedTapped(item)">
+          <ion-icon name="star"></ion-icon>&nbsp;
+<!--          <p>{{ item.team.name }} - {{ item.tournamentName }}</p>-->
+        </ion-item>
+      </ion-list>
+      <p>To add more to your watchlist, select a movie, then you can add them to your list.</p>
+      <ion-button shape="round" color="primary" expand="full" (click)="goToMovies()">
+        <ion-icon name="search"></ion-icon>&nbsp;Find a Movie
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
