--- a/src/app/movie-details/movie-details.page.html
+++ b/src/app/movie-details/movie-details.page.html
@@ -6,6 +6,6 @@
 
 <ion-content>
   <ion-card *ngIf="movies">
-    <ion-card-title>{{ movies.images }}</ion-card-title>
+    <ion-card-title>{{ movies.homepage }}</ion-card-title>
   </ion-card>
 </ion-content>
