--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,5 +1,5 @@
 <ion-header (loadeddata)="accountService.isLoggedIn();" (load)="accountService.isLoggedIn();" (loadstart)="accountService.isLoggedIn();" (loadedmetadata)="accountService.isLoggedIn();">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
