Fixing accountLogin Check

--- a/src/app/account/account.page.html
+++ b/src/app/account/account.page.html
@@ -12,13 +12,13 @@
     <ion-card-content>
       <ion-label>Name</ion-label>
       <ion-item>
-        <ion-label>
+        <ion-label id="account_name">
           {{accountService.loadedUser.displayName}}
         </ion-label>
       </ion-item>
       <ion-label>Email</ion-label>
       <ion-item>
-        <ion-label>
+        <ion-label id="account_email">
           {{accountService.loadedUser.email}}
         </ion-label>
       </ion-item>
