--- a/src/app/movies-list/movies-list.page.html
+++ b/src/app/movies-list/movies-list.page.html
@@ -14,7 +14,7 @@
       <ion-card-header> {{ movie.original_title }} </ion-card-header>
         <ion-list>
           <ion-item>
-            <img src="{{ movie.poster_path }}">
+            <ion-img src="https://image.tmdb.org/t/p/original/{{ movie.poster_path }}"></ion-img>
           </ion-item>
         </ion-list>
     </ion-card-content>
