--- a/src/app/movies-list/movies-list.page.html
+++ b/src/app/movies-list/movies-list.page.html
@@ -7,17 +7,13 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content style="display: flex; justify-content: center; flex-direction: row">
 <!--  <ion-card *ngFor="let movie of movies">-->
-  <ion-card *ngIf="movies" >
-    <ion-card-content *ngFor="let movie of movies.results">
-      <ion-card-header> {{ movie.original_title }} </ion-card-header>
-        <ion-list>
-          <ion-item>
-            <ion-img src="https://image.tmdb.org/t/p/original/{{ movie.poster_path }}"></ion-img>
-          </ion-item>
-        </ion-list>
-    </ion-card-content>
+  <ion-card *ngIf="movies" style="max-width: 150px">
+    <ion-list *ngFor="let movie of movies.results">
+      <ion-item> {{ movie.original_title }} </ion-item>
+            <ion-img src="https://image.tmdb.org/t/p/original/{{ movie.poster_path }}" ></ion-img>
+    </ion-list>
   </ion-card>
 
 
