--- a/src/app/movie-details/movie-details.page.html
+++ b/src/app/movie-details/movie-details.page.html
@@ -1,9 +1,9 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>movie-details</ion-title>
+    <ion-title>Popular Movies List</ion-title>
   </ion-toolbar>
 </ion-header>
 
