edited movies-list html, pulling master

--- a/src/app/movies-list/movies-list.page.html
+++ b/src/app/movies-list/movies-list.page.html
@@ -14,7 +14,23 @@
       <ion-card-header> {{ movie.original_title }} </ion-card-header>
         <ion-list>
           <ion-item>
-            <img src="{{ movie.poster_path }}">
+            <ion-grid>
+              <ion-row>
+                <ion-col>
+                  <img src="https://image.tmdb.org/t/p/w500{{ movie.backdrop_path }}">
+
+                </ion-col>
+                <ion-col>
+                  <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}">
+
+                </ion-col>
+
+                <ion-col>
+                  <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}">
+
+                </ion-col>
+              </ion-row>
+            </ion-grid>
           </ion-item>
         </ion-list>
     </ion-card-content>
