--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <div style="display: flex; flex-direction: row; justify-content: left; justify-items: left; margin-left: 0;">
       <ion-title>Search</ion-title>
-      <ion-item style="width: 100%; margin-right: 10px; padding: 1px;"><ion-input placeholder="Movie Title" style="padding: 1px;" id="searchBar" (ionInput)="searchByName();" (ionChange)="searchByName()"></ion-input></ion-item>
+      <ion-item style="width: 100%; margin-right: 10px; padding: 1px;"><ion-input placeholder="Movie Title" style="padding: 1px;" id="searchBar" (ionInput)="searchByName();" (ionChange)="searchByName();" (load)="searchByName()" (loadeddata)="searchByName();" (loadedmetadata)="searchByName();" (loadstart)="searchByName();"></ion-input></ion-item>
     </div>
 
   </ion-toolbar>
@@ -13,9 +13,12 @@
 
 <ion-content>
 <ion-card *ngFor="let movie of filtered; let i = index">
-  <ion-card-title>
-    {{filtered[i]}}
-  </ion-card-title>
+  <ion-card-content>
+    <ion-card-title>
+      {{filtered[i].title}}
+    </ion-card-title>
+  </ion-card-content>
+
 </ion-card>
 </ion-content>
 
