--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,41 +4,65 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Home
+      Movie Categories
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
     <ion-card class="welcome-card">
-      <img src="/assets/shapes.svg" alt="" />
+      <img src="/assets/icon/popcorn-film-cinema.png" alt="popcorn film cinema background image" />
+<!--      <img src="/assets/icon/cineplex.jpg" alt="popcorn film cinema background image" />-->
       <ion-card-header>
-        <ion-card-subtitle>Get Started</ion-card-subtitle>
-        <ion-card-title>Welcome to Ionic</ion-card-title>
+<!--        <ion-card-subtitle>Get Started</ion-card-subtitle>-->
+        <ion-card-title>Welcome to Movies</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
+        <p>Find you next entertainment option with ease! Select a category below & add items to your favorites or watch list!</p>
       </ion-card-content>
     </ion-card>
-    <ion-list lines="none">
-      <ion-list-header>
-        <ion-label>Resources</ion-label>
-      </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/building/scaffolding">
-        <ion-icon slot="start" color="medium" name="build"></ion-icon>
-        <ion-label>Scaffold Out Your App</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/layout/structure">
-        <ion-icon slot="start" color="medium" name="grid"></ion-icon>
-        <ion-label>Change Your App Layout</ion-label>
-      </ion-item>
-      <ion-item href="https://ionicframework.com/docs/theming/basics">
-        <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>
-        <ion-label>Theme Your App</ion-label>
-      </ion-item>
-    </ion-list>
-</ion-content>
+
+  <ion-card *ngIf="allTypes">
+    <!--    <ion-card-header>Followed Teams</ion-card-header>-->
+    <ion-card-content>
+      <ion-list>
+        <ion-list-header>Popular Categories:</ion-list-header>
+        <ion-item *ngFor="let category of allTypes" (click)="categoryTapped(category)">
+          <ion-icon name="{{category.icon}}"></ion-icon>&nbsp;
+          <p>{{ category.text }}</p>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
+
+<!--  TODO: Implement below; w/o ion-card-->
+<!--    <ion-list lines="none">-->
+<!--      <ion-list-header>-->
+<!--        <ion-title>Popular Categories:</ion-title>-->
+<!--      </ion-list-header>-->
+<!--      <ion-item href="https://api.themoviedb.org/3/movie/top_rated?api_key=4eb5c031eab630e105a371a7a7c4488e">-->
+<!--        <ion-icon slot="start" color="medium" name="heart"></ion-icon>-->
+<!--        <ion-label>Top Rated</ion-label>-->
+<!--      </ion-item>-->
+<!--    </ion-list>-->
+<!--</ion-content>-->
+
+
+
+<!--original layout-->
+<!--<ion-item href="https://ionicframework.com/docs/">-->
+<!--  <ion-icon slot="start" color="medium" name="book"></ion-icon>-->
+<!--  <ion-label>Ionic Documentation</ion-label>-->
+<!--</ion-item>-->
+<!--<ion-item href="https://ionicframework.com/docs/building/scaffolding">-->
+<!--  <ion-icon slot="start" color="medium" name="build"></ion-icon>-->
+<!--  <ion-label>Scaffold Out Your App</ion-label>-->
+<!--</ion-item>-->
+<!--<ion-item href="https://ionicframework.com/docs/layout/structure">-->
+<!--  <ion-icon slot="start" color="medium" name="grid"></ion-icon>-->
+<!--  <ion-label>Change Your App Layout</ion-label>-->
+<!--</ion-item>-->
+<!--<ion-item href="https://ionicframework.com/docs/theming/basics">-->
+<!--  <ion-icon slot="start" color="medium" name="color-fill"></ion-icon>-->
+<!--  <ion-label>Theme Your App</ion-label>-->
+<!--</ion-item>-->
