--- a/src/app/movies-list/movies-list.page.html
+++ b/src/app/movies-list/movies-list.page.html
@@ -22,17 +22,17 @@
           <ion-grid>
             <ion-row>
               <ion-col>
-                <ion-button (click)="movieDetails"> More Details & options</ion-button>
-                <h1> {{ movie.title }}"</h1>
-                <h4> Rating: {{movie.vote_average}}</h4>
-                <h4> Release Date: {{movie.release_date}}</h4>
-                <img src="https://image.tmdb.org/t/p/w500{{ movie.backdrop_path }}">
+                <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}">
               </ion-col>
               <ion-col>
                 <p> Overview: {{movie.overview}}</p>
               </ion-col>
               <ion-col>
-                <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}">
+                <h1> {{ movie.title }} </h1>
+                <h4> Rating: {{movie.vote_average}}</h4>
+                <h4> Release Date: {{movie.release_date}}</h4>
+                <img src="https://image.tmdb.org/t/p/w500{{ movie.backdrop_path }}">
+                <ion-button (click)="movieDetails"> More Details & options</ion-button>
               </ion-col>
             </ion-row>
           </ion-grid>
