--- a/src/app/movies-list/movies-list.page.html
+++ b/src/app/movies-list/movies-list.page.html
@@ -32,7 +32,7 @@
                 <h4> Rating: {{movie.vote_average}}</h4>
                 <h4> Release Date: {{movie.release_date}}</h4>
                 <img src="https://image.tmdb.org/t/p/w500{{ movie.backdrop_path }}">
-                <ion-button (click)="movieDetails"> More Details & options</ion-button>
+                <ion-button (click)="movieClicked(movie)"> More Details & options</ion-button>
               </ion-col>
             </ion-row>
           </ion-grid>
