--- a/src/app/movies-list/movies-list.page.html
+++ b/src/app/movies-list/movies-list.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title>Top Rated Movies List</ion-title>
   </ion-toolbar>
