Search Page Style Match

--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -12,13 +12,38 @@
 </ion-header>
 
 <ion-content>
-<ion-card *ngFor="let movie of filtered; let i = index">
-  <ion-card-content>
-    <ion-card-title>
-      {{filtered[i].title}}
-    </ion-card-title>
-  </ion-card-content>
-
-</ion-card>
+<!--<ion-card *ngFor="let movie of filtered; let i = index">-->
+<!--  <ion-card-content>-->
+<!--    <ion-card-title>-->
+<!--      {{filtered[i].title}}-->
+<!--    </ion-card-title>-->
+<!--  </ion-card-content>-->
+<!--</ion-card>-->
+  <ion-card>
+    <ion-card-content *ngFor="let movie of filtered">
+      <ion-card-header> {{ movie.original_title }} </ion-card-header>
+      <ion-list>
+        <ion-item>
+          <ion-grid>
+            <ion-row>
+              <ion-col>
+                <img *ngIf="movie.poster_path" src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}">
+              </ion-col>
+              <ion-col>
+                <p> Overview: {{movie.overview}}</p>
+              </ion-col>
+              <ion-col>
+                <h1> {{ movie.title }} </h1>
+                <h4> Rating: {{movie.vote_average}}</h4>
+                <h4> Release Date: {{movie.release_date}}</h4>
+                <img src="https://image.tmdb.org/t/p/w500{{ movie.backdrop_path }}">
+                <ion-button (click)="movieClicked(movie)"> More Details & options</ion-button>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
 
