Added More Button

--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -44,6 +44,7 @@
         </ion-item>
       </ion-list>
     </ion-card-content>
+    <div style="display: flex; justify-content: center; width: 100%; padding-bottom: 15px;"><ion-button>More</ion-button></div>
   </ion-card>
 </ion-content>
 
