added function to add movieId from movie-detail to watchlist array

--- a/src/app/movie-details/movie-details.page.html
+++ b/src/app/movie-details/movie-details.page.html
@@ -69,18 +69,12 @@
           <ion-button (click)="addVote()">Vote</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button (click)="addToWatchList(movie)">Add To WatchList</ion-button>
+          <ion-button (click)="addToWatchlist()">Add To WatchList</ion-button>
         </ion-col>
         <ion-col>
           <ion-button>Seen It</ion-button>
         </ion-col>
       </ion-row>
-<!--      <ion-segment (ionChange)="segmentChanged($event)">-->
-<!--        <ion-segment-button value="false">-->
-<!--          <ion-icon name="heart"></ion-icon>-->
-<!--          <ion-label>Watched</ion-label>-->
-<!--        </ion-segment-button>-->
-<!--      </ion-segment>-->
     </ion-card-content>
   </ion-card>
 </ion-content>
