added function to save watchlist to user db, created user interface

--- a/src/app/list/watch-list/watch-list.page.html
+++ b/src/app/list/watch-list/watch-list.page.html
@@ -5,7 +5,10 @@
 </ion-header>
 
 <ion-content>
-<div *ngFor="let movie of watchList">
-  {{ movie }}
-</div>
+<!--<div *ngFor="let movie of watchList">-->
+<!--  {{ movie }}-->
+<!--</div>-->
+  <div *ngFor="let movie of movie">
+    {{ movie.title }}
+  </div>
 </ion-content>
