--- a/src/app/list/watch-list/watch-list.page.html
+++ b/src/app/list/watch-list/watch-list.page.html
@@ -5,10 +5,30 @@
 </ion-header>
 
 <ion-content>
-<!--<div *ngFor="let movie of watchList">-->
-<!--  {{ movie }}-->
-<!--</div>-->
-  <div *ngFor="let movie of movie">
-    {{ movie.title }}
-  </div>
+  <ion-card *ngFor="let movie of movie" >
+    <ion-card-content>
+      <ion-card-header> {{ movie.original_title }} </ion-card-header>
+      <ion-list>
+        <ion-item>
+          <ion-grid>
+            <ion-row>
+              <ion-col>
+                <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}">
+              </ion-col>
+              <ion-col>
+                <p> Overview: {{movie.overview}}</p>
+              </ion-col>
+              <ion-col>
+                <h1> {{ movie.title }} </h1>
+                <h4> Rating: {{movie.vote_average}}</h4>
+                <h4> Release Date: {{movie.release_date}}</h4>
+                <img src="https://image.tmdb.org/t/p/w500{{ movie.backdrop_path }}">
+<!--                <ion-button (click)="movieClicked(latestType)"> More Details & options</ion-button>-->
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
