--- a/src/app/list/watch-list/watch-list.page.html
+++ b/src/app/list/watch-list/watch-list.page.html
@@ -23,7 +23,7 @@
                 <h4> Rating: {{movie.vote_average}}</h4>
                 <h4> Release Date: {{movie.release_date}}</h4>
                 <img src="https://image.tmdb.org/t/p/w500{{ movie.backdrop_path }}">
-<!--                <ion-button (click)="movieClicked(latestType)"> More Details & options</ion-button>-->
+                <ion-button (click)="movieClicked(movie)"> More Details & options</ion-button>
               </ion-col>
             </ion-row>
           </ion-grid>
