--- a/src/app/list/watched-list/watched-list.page.html
+++ b/src/app/list/watched-list/watched-list.page.html
@@ -17,7 +17,7 @@
   </ion-card>
 
 <!--  <ion-list *ngFor="let item of watched; index as i">-->
-  <ion-list *ngFor="let item of movie">
+  <ion-list *ngFor="let item of movie" (click)="movieClicked(item)">
     <ion-item>
       <ion-thumbnail slot="start">
         <img src="https://image.tmdb.org/t/p/w500{{ item.backdrop_path }}">
