added html change

--- a/src/app/list/watched-list/watched-list.page.html
+++ b/src/app/list/watched-list/watched-list.page.html
@@ -12,7 +12,7 @@
   </ion-card>
   <ion-card *ngIf="movie">
     <ion-card-content>
-      <ion-card-title>Here's what you've watched already: click a movie for more details </ion-card-title>
+      <ion-card-title>Click a movie for more details... </ion-card-title>
     </ion-card-content>
   </ion-card>
 
