--- a/src/app/movie-details/movie-details.page.html
+++ b/src/app/movie-details/movie-details.page.html
@@ -66,7 +66,7 @@
       </ion-grid>
       <ion-row>
         <ion-col>
-          <ion-button (click)="addVote()">Vote</ion-button>
+          <ion-button (click)="authToken()">Vote</ion-button>
         </ion-col>
         <ion-col>
           <ion-button (click)="addToWatchlist()">Add To WatchList</ion-button>
