--- a/src/app/movie-details/movie-details.page.html
+++ b/src/app/movie-details/movie-details.page.html
@@ -66,6 +66,9 @@
       </ion-grid>
       <ion-row>
         <ion-col>
+          <ion-button (click)="attachGuestSessionId()">Rate</ion-button>
+        </ion-col>
+        <ion-col>
           <ion-button (click)="authToken()">Vote</ion-button>
         </ion-col>
         <ion-col>
