--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -4,14 +4,14 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      Your Lists
+      All Lists
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-tabs>
-    <ion-tab-bar slot="bottom">
+    <ion-tab-bar slot="bottom" color="success">
       <ion-tab-button tab="watch-list">
         <ion-icon name="play"></ion-icon>
         <ion-label>Watch List</ion-label>
