--- a/src/app/movie-details/movie-details.page.html
+++ b/src/app/movie-details/movie-details.page.html
@@ -11,7 +11,7 @@
   <ion-card>
     <ion-card-content style="display: flex; justify-content: center; align-items: center; flex-direction: column">
       <ion-card-title style="text-align: center">{{ movie.title }}</ion-card-title>
-      <ion-img style="max-width: 350px;" src="https://image.tmdb.org/t/p/original/{{ movie.poster_path }}"></ion-img>
+      <ion-img style="max-width: 250px; max-height: 450px;" src="https://image.tmdb.org/t/p/original/{{ movie.poster_path }}"></ion-img>
     </ion-card-content>
     <ion-card-content>
       <ion-card-title>Description:</ion-card-title>
