--- a/src/app/list/watch-list/watch-list.page.html
+++ b/src/app/list/watch-list/watch-list.page.html
@@ -1,11 +1,18 @@
 <ion-header>
   <ion-toolbar color="secondary">
-    <ion-title>Watch List</ion-title>
+    <ion-title>Your Watch List</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-card *ngFor="let movie of movie" >
+
+  <ion-card *ngIf="!movie">
+    <ion-card-content>
+      <ion-card-header>You haven't added any movies to your watch list!</ion-card-header>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card *ngFor="let movie of movie" (click)="movieClicked(movie)">
     <ion-card-content>
       <ion-card-header> {{ movie.original_title }} </ion-card-header>
       <ion-list>
@@ -13,17 +20,14 @@
           <ion-grid>
             <ion-row>
               <ion-col>
-                <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}">
-              </ion-col>
-              <ion-col>
-                <p> Overview: {{movie.overview}}</p>
+                <img src="https://image.tmdb.org/t/p/w500{{ movie.backdrop_path }}">
               </ion-col>
               <ion-col>
                 <h1> {{ movie.title }} </h1>
                 <h4> Rating: {{movie.vote_average}}</h4>
                 <h4> Release Date: {{movie.release_date}}</h4>
-                <img src="https://image.tmdb.org/t/p/w500{{ movie.backdrop_path }}">
                 <ion-button (click)="movieClicked(movie)"> More Details & options</ion-button>
+                <p> Overview: {{movie.overview}}</p>
               </ion-col>
             </ion-row>
           </ion-grid>
