--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,14 @@
+.welcome-card img {
+  max-height: 30vh;
+  max-width: 60vh;
+  margin: auto;
+}
+
+.poster-image img {
+  max-height: 65vh;
+  max-width: 45vh;
+}
+
 /*
  * App Global CSS
  * ----------------------------------------------------------------------------
