--- a/src/app/list/watch-list/watch-list.page.html
+++ b/src/app/list/watch-list/watch-list.page.html
@@ -6,7 +6,7 @@
 
 <ion-content>
 
-  <ion-card *ngIf="!movie">
+  <ion-card *ngIf="!movie[0]">
     <ion-card-content>
       <ion-card-header>You haven't added any movies to your watch list!</ion-card-header>
     </ion-card-content>
