--- a/src/app/list/watched-list/watched-list.page.html
+++ b/src/app/list/watched-list/watched-list.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-card *ngIf="!movie">
+  <ion-card *ngIf="!movie[0]">
     <ion-card-content>
       <ion-card-header>You haven't seen any movies!</ion-card-header>
     </ion-card-content>
