--- a/src/app/movie-details/movie-details.page.html
+++ b/src/app/movie-details/movie-details.page.html
@@ -86,7 +86,7 @@
           <ion-card-content>
             <ion-item><ion-input id="comment_text"></ion-input></ion-item>
             <div style="display: flex; justify-content: center; justify-items: center; align-content: center; align-items: center; width: 100%; margin-top: 20px;">
-              <ion-button (click)="addComment(movie.id, document.getElementById('comment_text').value)">COMMENT</ion-button>
+              <ion-button (click)="addComment(movie.id, document.getElementById('comment_text'))">COMMENT</ion-button>
             </div>
           </ion-card-content>
         </ion-card>
